Fix an IE11 alignment issue (#233)
Alignment in IE11 was thrown off because of some bad flex support. It
wasn't possible to correctly vertically align text without setting some
vertical padding on the button.

This introduces some magic numbers, which is the way we did this before
the last major version. I'm ignoring the icon size for now, we'll tackle
that separately.

--- a/src/scss/_mixins.scss
+++ b/src/scss/_mixins.scss
@@ -160,10 +160,6 @@
 	@include oTypographySans($weight: 'semibold');
 	@include _oButtonsSizeContent($size);
 	display: inline-block;
-	// Use flexbox to align text vertically when used with an anchor element.
-	display: inline-flex; // sass-lint:disable-line no-duplicate-properties
-	align-items: center;
-	justify-content: center;
 	box-sizing: border-box;
 	vertical-align: middle;
 	margin: 0;
